# rust-benchmarks

./: .gitattributes  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: main.yml
cases/argon2/: Cargo.toml  lib.rs  out.wasm
cases/compression/: Cargo.toml  lib.rs  out.wasm
cases/hashmap/: Cargo.toml  lib.rs  out.wasm
cases/json_parse/: Cargo.toml  lib.rs  out.wasm
cases/mandelbrot/: Cargo.toml  lib.rs  out.wasm
cases/matrix_mul/: Cargo.toml  lib.rs  out.wasm
cases/nbody/: Cargo.toml  lib.rs  out.wasm
cases/prime_sieve/: Cargo.toml  lib.rs  out.wasm
cases/regex_redux/: lib.rs  out.wasm
cases/reverse_complement/: impl_.rs  lib.rs  out.wasm
cases/sort/: Cargo.toml  lib.rs  out.wasm
cases/spectralnorm/: Cargo.toml  lib.rs  out.wasm
cases/tiny_keccak/: lib.rs  out.wasm
cases/word_count/: Cargo.toml  lib.rs  out.wasm
src/: main.rs
