[package]
name = "build_benches"
version.workspace = true
publish.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[workspace]
members = [
    "cases/argon2",
    "cases/nbody",
    "cases/matrix_mul",
    "cases/prime_sieve",
    "cases/tiny_keccak",
    "cases/reverse_complement",
    "cases/regex_redux",
    "cases/sort",
    "cases/word_count",
    "cases/compression",
]
resolver = "2"

[workspace.package]
version = "0.0.0"
publish = false
authors = ["Robin Freyler <robin.freyler@gmail.com>"]
repository = "https://github.com/wasmi-labs/rust-benchmarks"
rust-version = "1.85"
edition = "2024"
readme = "README.md"
license = "MIT/Apache-2.0"

[[bin]]
name = "build_benches"

[dependencies]
wasm-opt = "0.116.1"
cargo_metadata = "0.18.1"

[profile.wasm]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
