[package]
name = "wasmi_benches_argon2"
version.workspace = true
publish.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
argon2 = { version = "0.5.3", default-features = false, features = ["alloc"] }
