[package]
name = "wasmi_benches_compression"
version.workspace = true
publish.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
miniz_oxide = { version = "0.8.5", default-features = false, features = ["with-alloc"] }
