[package]
name = "wasmi_benches_hashmap"
version.workspace = true
publish.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
hashbrown = "0.17.1"
foldhash = "0.2.0"
