[package]
name = "wasmi_benches_json_parse"
version.workspace = true
publish.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
serde_json = { version = "1.0.140", default-features = false, features = ["alloc"] }
